[package]
name = "lora-phy"
version = "3.0.2-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/embassy-rs/lora-phy"
categories = ["embedded", "no-std", "asynchronous"]
keywords = ["lora", "radio", "embedded-hal-async", "iot", "semtech"]
description = "A LoRa physical layer implementation enabling utilization of a range of MCU/LoRa board combinations within embedded frameworks supporting embedded-hal-async."
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
defmt = { version = "0.3", optional = true }
lora-modulation = { path = "../lora-modulation", version = ">=0.1.2" }
lorawan-device = { path = "../lorawan-device", default-features = false, version = "0.12", optional = true }
num-traits = { version = "0.2", default-features = false }
embedded-hal = { version = "1" }
embedded-hal-async = { version = "1" }
document-features = "0.2.8"

[features]

## Use [`defmt`](https://docs.rs/defmt/0.3.8/defmt/index.html) for logging.
defmt-03 = ["dep:defmt", "lorawan-device?/defmt-03", "lora-modulation/defmt-03"]

## Async LoRaWAN Rx/Tx interface implementation
lorawan-radio = ["dep:lorawan-device"]

## LR1110 GNSS positioning functions (satellite scanning, almanac management)
lr1110-gnss = []

## LR1110 WiFi scanning functions (802.11 b/g/n passive scanning for geolocation)
lr1110-wifi = []

## LR1110 crypto engine functions (key management, AES, LoRaWAN crypto)
lr1110-crypto = []

## LR1110 RTToF ranging functions (Round-Trip Time of Flight distance measurement)
lr1110-ranging = []

## Enable all LR1110 optional features
lr1110-all = ["lr1110-gnss", "lr1110-wifi", "lr1110-crypto", "lr1110-ranging"]

[dev-dependencies]
# Include lorawan-device unconditionally so all regions are enabled for tests
lorawan-device = { path = "../lorawan-device" }
